# python-level1

./: .gitignore  LICENSE  README.md
0.installation_party/: Previous-installation.html  README.md  readme.html
1.Introduction/: 01-Introduction.html  01-Introduction.ipynb
2.Numpy/: 2.numpy-ndarray.html  2.numpy-ndarray.ipynb  2.numpy-ndarray.slides.html  mes_tableaux.npz  mon_tableau.csv  mon_tableau.npy  rawPPI_network_nodeTable.csv
3.DataVizualisation/: 3.pandas.html  3.pandas.ipynb  3.python_matplotlib2.html  3.python_matplotlib2.ipynb  3.session_maplotlib.html  3.session_maplotlib.ipynb
3.DataVizualisation/codes/: latex.py  sauvegarde.py  subplot.py
3.DataVizualisation/codes/.ipynb_checkpoints/: subplot2-checkpoint.py
4.BonnesPratiques/codes/: mymodule.py  mymodule2.py  portees_var.py  test_mymodule.py
4.BonnesPratiques/codes/htmlcov/: index.html  mymodule_py.html  status.json  test_mymodule_py.html
TP/1.TP-Introduction/: Escaping_the_Matrix.ipynb  README.md  game.py
TP/2.TP-Numpy-Matplotlib/: Fireworks_Simulation.ipynb  README.md  fireworks.py
TP/3.TP-Structuring-Sharing/: Escape_from_the_Matrix_with_Fireworks.ipynb  README.md
TP/3.TP-Structuring-Sharing/fireworks_game/: pyproject.toml
TP/3.TP-Structuring-Sharing/fireworks_game/fireworks_game/: __init__.py  fireworks.py  game.py  main.py
TP/5.TP-Alternatif-Vizu-Matplotlib/: 3.demo_with_panda.html  3.demo_with_panda.ipynb  3.matplotlib.ipynb
TP/6.TP-Alternatif-Numpy/: check_installation.py
TP/7.TP-Alternatif-ACP-Numpy/Templates/: acp.py
